clusters/vollminlab-cluster/flux-system/headlamp/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: flux-system
  labels:
    app: headlamp
    env: production
    category: core
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    shlink.vollminlab.com/slug: headlamp
spec:
  ingressClassName: nginx
  rules:
    - host: headlamp.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
  tls:
    - hosts:
        - headlamp.vollminlab.com
      secretName: wildcard-tls
