clusters/vollminlab-cluster/flux-system/headlamp/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: headlamp-ingress
  namespace: flux-system
  labels:
    app: headlamp
    env: production
    category: core
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: headlamp
